// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Navigation /> renders the navigation component successfully for home 1`] = `
<nav
  className="flex justify-end"
>
  <Connect(AvatarIcon) />
</nav>
`;

exports[`<Navigation /> renders the navigation component successfully for register 1`] = `
<nav
  className="flex justify-end"
>
  <p
    className="sign-out link dim black underline pa3 pointer"
    onClick={[Function]}
  >
    Sign In
  </p>
</nav>
`;

exports[`<Navigation /> renders the navigation component successfully for signin 1`] = `
<nav
  className="flex justify-end"
>
  <p
    className="sign-out link dim black underline pa3 pointer"
    onClick={[Function]}
  >
    Register
  </p>
</nav>
`;
